cabal-version: 2.0
name: primitive-maybe
version: 0.1.0
description: Please see the README on GitHub at <https://github.com/andrewthad/primitive-maybe#readme>
homepage: https://github.com/andrewthad/primitive-maybe#readme
bug-reports: https://github.com/andrewthad/primitive-maybe/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD3
license-file: LICENSE
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/primitive-maybe

library
  exposed-modules:
    Data.Primitive.Array.Maybe
    Data.Primitive.SmallArray.Maybe
  other-modules:
    Data.Primitive.Maybe.Internal
  hs-source-dirs: src
  build-depends:
      base >=4.9.1.0 && <5
    , primitive >= 0.6.4
  ghc-options: -O2 -Wall
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9.1.0 && <5
    , primitive-maybe
  default-language: Haskell2010
